export const SignInTestIds = {
  welcomeText: 'SignInWelcomeText',
  emailInput: 'SignInEmailInput',
  passwordInput: 'SignInPasswordInputId',
  mainButton: 'SignInMainButton',
};

export const SignInLabels = {
  welcomeText: 'Please enter your credentials',
  emailLabel: 'Email',
  passwordLabel: 'Password',
  mainButton: 'Log in',
};
