export const HomeTestIds = {
  headerText: 'HomeHeaderText',
  signOut: 'HomeSignOut',
  noFavoritesLabel: 'HomeNoFavoritesLabel',
  searchButton: 'HomeSearch',
  favoritesList: 'HomeFavoriteScroll',
  artsList: 'HomeArtsScroll',
};

export const HomeLabels = {
  headerText: 'Arts gallery',
  search: 'Search',
  signOut: 'Sign out',
  favoritesLabel: 'Favorites',
  allLabel: 'All',
  noFavoritesLabel: 'You have no favorites yet',
};
