export const SearchTestIds = {
  input: 'SearchInput',
  goBack: 'SearchGoBack',
};

export const SearchLabels = {
  goBack: 'Go back',
  header: 'Search',
  inputPlaceholder: 'Title',
  inputLabel: 'Title',
  emptyLabel: 'Type something to find by title',
  arts: 'Arts',
};
