export const DetailsTestIds = {
  goBack: 'DetailsBackButton',
  favoriteButton: 'DetailsFavoriteButton',
  header: 'DetailsHeader',
  closeSnackbar: 'DetailsCloseSnackbar',
};

export const DetailsLabels = {
  header: 'Details',
  back: 'Go back',
  title: 'Title',
  artist: 'Artist',
  date: 'Date',
  done: 'Done!',
  add: 'Add to favorites',
  remove: 'Remove from favorites',
};
