appId: com.helloapp
---
- launchApp
- tapOn: "Email"
- inputText: "e"
- inputText: "ve.holt@reqres.in"
- tapOn: "Password"
- inputText: "anythingWorks"
- tapOn:
    id: "SignInMainButton"
- waitForAnimationToEnd
- assertVisible:
    id: "HomeNoFavoritesLabel"
- tapOn:
    id: "HomeSignOut"
- assertVisible:
    id: "SignInWelcomeText"
